# libqcat

./: .gitignore  Makefile.am  README.md  configure.in
old/: Makefile
postgres/: compile.sh  log2.c
src/: Makefile.am  qcat.cpp  qcat.h  qcatattribute.cpp  qcatattribute.h  qcatbin.cpp  qcatbin.h  qcatbinnumeric.cpp  qcatbinnumeric.h  qcatbinpassthrough.cpp  qcatbinpassthrough.h  qcatbinstats.cpp  qcatbinstats.h  qcatbinstrategy.cpp  qcatbinstrategy.h  qcatbintimestamp.cpp  qcatbintimestamp.h  qcatcondition.cpp  qcatcondition.h  qcatdatasource.cpp  qcatdatasource.h  qcatfield.cpp  qcatfield.h  qcatfieldmanager.cpp  qcatfieldmanager.h  qcatfieldstats.cpp  qcatfieldstats.h  qcatngram.cpp  qcatngram.h  qcatpqresult.cpp  qcatpqresult.h
tests/: run_tests  sanity_test.cpp
