AC_INIT(src/main.cc)

PACKAGE=libqcat
VERSION=0.1.0

BOOST_REQUIRE([1.54.1])
BOOST_TIMER([mt-s])
BOOST_THREAD([mt-s]
BOOST_SYSTEM([mt-s]
BOOST_IOSTREAMS([mt-s]
BOOST_LOG_SETUP([mt-s]
BOOST_LOG([mt-s]
BOOST_DATE_TIME([mt-s]
BOOST_FILESYSTEM([mt-s]

AM_INIT_AUTOMAKE($PACKAGE, $VERSION)

INTI_REQUIRED_VERSION=1.0.7
PKG_CHECK_MODULES(INTI, inti-1.0 >= $INTI_REQUIRED_VERSION)
AC_SUBST(INTI_CFLAGS)
AC_SUBST(INTI_LIBS)

AC_PROG_LIBTOOL
AC_PROG_CXX

AC_OUTPUT(Makefile src/Makefile)
